--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "i": "^0.3.7",
     "next": "14.2.3",
+    "npm": "^10.8.0",
     "react": "^18",
-    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
+    "react-media-recorder": "^1.6.6",
+    "react-media-recorder-2": "^1.6.23",
     "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
