--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "npm": "^10.8.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-media-recorder": "^1.6.6",
     "react-media-recorder-2": "^1.6.23",
-    "react-phone-input-2": "^2.15.1"
+    "react-phone-input-2": "^2.15.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
